--- a/index.html
+++ b/index.html
@@ -51,15 +51,18 @@
      
      <div class="row">
         <div class="card1 col-xs-4 col-sm-4 col-md-4">
-            <img class="card-img-top" src="assets/images/award.png" alt="Card image cap">
+            <img class="card-img-top"  style="width: 100px;
+    height:auto;" src="assets/images/award.png" alt="Card image cap">
             <p>Duis consectetur, mauris ut sagittis tincidunt, ex erat imperdiet libero </p>
         </div>
          <div class="card2 col-xs-4 col-sm-4 col-md-4">
-              <img class="card-img-top" src="assets/images/good.png" alt="Card image cap">
+              <img class="card-img-top" style="width: 100px;
+    height:auto;" src="assets/images/good.png" alt="Card image cap">
              <p>Duis consectetur, mauris ut sagittis tincidunt, ex erat imperdiet libero, eu cursus enim nisi at turpis </p>
          </div>
           <div class="card3 col-xs-4 col-sm-4 col-md-4"> 
-           <img class="card-img-top" src="assets/images/good.png" alt="Card image cap">
+           <img class="card-img-top" style="width: 100px;
+    height:auto;"  src="assets/images/good.png" alt="Card image cap">
               <p>Duis consectetur, mauris ut sagittis tincidunt, ex erat imperdiet libero, eu cursus enim nisi at tur </p>
           </div>
 
