--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
              </ul>
               </div>
      </nav>
-          <img class="background" src="assets/images/background.jpg" width="100%">
+          <img class="largeimg" src="assets/images/background.jpg" width="100%">
        <section class="container-fluid">
         <div class="row row-table">
             <div class="col-md-12 section-column">
