--- a/group.html
+++ b/group.html
@@ -46,25 +46,25 @@
     <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block1">
     			<h5>20 May,2019</h5>
     	 <img src="assets/images/group1.jpg" style="width:100%">
-    			<h5>impedit minus id quod soluta</h5> 
-                <h6>maxime placeat facere</h6>
-              	<p class="p1">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus.</p>
+    			<h5>Enjoy Featured Snacks</h5> 
+                <h6>"Guo Zao" local featured breakfast</h6>
+              	<p class="p1">You will find lots of street food unique to the city, like dry noodles, which can be savoured in the popular food mecca – Hubu Alley.</p>
                 <a href="contactUs.html">More Info</a>
     </div>   
 	<div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block2">
 		<h5>20 May,2019</h5>
 		<img src="assets/images/group2.jpg" style="width:100%">
 			<h5>New Wuhan Tour</h5> 
-            <h6>maxime placeat facere</h6>
+            <h6>Qingchuan Bridge</h6>
               <p class="p2">Provides a mix of old and new wuhan. Exploring the historical sites while mixing it up with the modern landmarks that make up the area.</p>
             <a href="contactUs.html">More Info</a>
 	</div>   
 	<div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block3">
 		<h5>20 May,2019</h5>
 		<img src="assets/images/group3.jpg" style="width:100%">
-			<h5>Old Wuhan tour</h5> 
+			<h5>Old Wuhan Tour</h5> 
             <h6>maxime placeat facere</h6>
-              <p class="p3">Provides a historical journey of old Wuhan with emphasis on history and culture. Food selection focus on the traditional Wuhan cuisines</p>
+              <p class="p3"> Wuhan is one of the birthplaces of the powerful ancient state of Chu, and inherits the culture of that state. Provides a historical journey with emphasis on history and culture.</p>
             <a href="contactUs.html">More Info</a>
 	</div>   
 	
