--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
                 <div class="row justify-content-center">
                       <div class="col">
                           <h3 class="section-heading uppercase text-danger">YOUR PERFECT JOURNEY STARTS WITH US</h3>
-                          <p>We offer a wide variety of private tours for any budget. We provide super value tours for a range of accommodations, sight-seeing and dining experiences. You can also design your own budget tours around your unique interests and preferences.  No matter your decision, you will still receive the best service from our tour operators. We want you to experience the full wonder of Wuhan tailored to your expectations.</p>
+                          <p class="text1">We offer a wide variety of private tours for any budget. We provide super value tours for a range of accommodations, sight-seeing and dining experiences. You can also design your own budget tours around your unique interests and preferences.  No matter your decision, you will still receive the best service from our tour operators. We want you to experience the full wonder of Wuhan tailored to your expectations.</p>
                     </div>
                 </div>
             </div>
