--- a/group.html
+++ b/group.html
@@ -19,30 +19,31 @@
           <span class="navbar-toggler-icon"></span>
        </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a class="nav-link" href="home.html">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="privateTours.html">Private Tours</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="group.html">Group Travel</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contactUs.html">Contact Us</a>
-              </li>
-         </ul>
+              <ul class="navbar-nav">
+                  <li class="nav-item">
+                  <a class="nav-link" href="home.html">Home</a>
+                        </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="privateTours.html">Private Tours</a>
+                        </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="group.html">Group Travel</a>
+                        </li>
+                  <li class="nav-item">
+                  <a class="nav-link" href="contactUs.html">Contact Us</a>
+                  </li>
+               </ul>
           </div>
  </nav>
-<div class="banner3"><img src="assets/images/banner3.jpg" width="100%"></div>
+      <div class="banner3"><img src="assets/images/banner3.jpg" width="100%">
+      </div>
 </div>
 <div class="container">
 <div class="row">
       <div class="group">
     		<h3>Group Travel</h3>
 			<p>Provides an exploration of the new city bustling with creativity and modern landmarks.</p>
-	 </div>
+	   </div>
     <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block1">
     			<h5>20 May,2019</h5>
     	 <img src="assets/images/group1.jpg" style="width:100%">
@@ -64,10 +65,9 @@
 		<img src="assets/images/group3.jpg" style="width:100%">
 			<h5>Old Wuhan Tour</h5> 
             <h6>maxime placeat facere</h6>
-              <p class="p3"> Wuhan is one of the birthplaces of the powerful ancient state of Chu, and inherits the culture of that state. Provides a historical journey with emphasis on history and culture.</p>
-            <a href="contactUs.html">More Info</a>
+            <p class="p3"> Wuhan is one of the birthplaces of the powerful ancient state of Chu, and inherits the culture of that state. Provides a historical journey with emphasis on history and culture.</p>
+            <a href ="contactUs.html">More Info</a>
 	</div>   
-	
 	<div class="text">
 		<h3 class="events">Featured Events</h3>
     		<div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 float-left">
@@ -75,7 +75,7 @@
 			</div>
 		    <div class="col-lg-8 col-md-8 col-xs-12 col-sm-12 float-right content">
     		<h5>7 Days Wuhan & Yichang Yangtze Cruise Tour</h5>
-    		<h6>Yellow Crane Tower, Hubei Provincial Museum, Yangtze River, Three Gorges Dam</h6>>
+    		<h6>Yellow Crane Tower, Hubei Provincial Museum, Yangtze River, Three Gorges Dam</h6>
             	<ul>
             		<li>Day 1: Wuhan Arrival.Your guide and driver will meet you at airport or train station and pick you up at your hotel. The rest of day is free for you to explore this city. </li>
             		<li>Day 2: you will begin to visit Guiyuan Temple. Later, head to the Heptachord Terrace (Guqin Tai),Lastly, transfer to Yellow Crane Tower.</li>
@@ -111,20 +111,20 @@
       <div class="col-xs-12 col-sm-4 col-md-4 footerBlock">
 					<div class="list-unstyled">
 					  <h6 class="link">Link</h6>
-						 <ul class="fList">
-          <ul>
-            <a class="link1" href="home.html">Home</a>
-          </ul>
-          <ul>
-            <a class="link1" href="privateTours.html">Private Tours</a>
-          </ul>
-          <ul>
-            <a  class="link1" href="group.html">Group Tours</a>
-          </ul>
-          <ul>
-            <a class="link1" href="contactUs.html">Contact Us</a>
-          </ul>
-        </ul>
+  						 <ul class="fList">
+                  <ul>
+                    <a class="link1" href="home.html">Home</a>
+                  </ul>
+                  <ul>
+                    <a class="link1" href="privateTours.html">Private Tours</a>
+                  </ul>
+                  <ul>
+                    <a  class="link1" href="group.html">Group Tours</a>
+                  </ul>
+                  <ul>
+                    <a class="link1" href="contactUs.html">Contact Us</a>
+                  </ul>
+             </ul>
 					</div>
 				</div>
 				<div class="col-md-12 bg-black copyright">
