--- a/contactUs.html
+++ b/contactUs.html
@@ -11,11 +11,11 @@
     <title>travelplanWuhan!contactUs</title>
   </head>
 <body>
-    <div class="container-fluid"> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
-            <a href="home.html"><img class="navbar-brand" src="assets/images/logo.png" width="150px" height="150px"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+    <div class   ="container-fluid"> 
+    <nav class   ="navbar navbar-expand-lg navbar-light bg-light static-top">
+    <a href      ="home.html"><img class="navbar-brand" src="assets/images/logo.png" width="150px" height="150px"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class  ="navbar-toggler-icon"></span>
            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                <ul class="navbar-nav">
@@ -65,19 +65,19 @@
           </div>
 <div class="container-fluid">
    <div class="row">
-  <div class="form col-xs-12 col-sm-12 col-md-12">
+          <div class="form col-xs-12 col-sm-12 col-md-12">
                     <form  mothod="post">
-                 <fieldset>
-                             <label>First Name</label>
-                             <input type="Fname" id="fname" required><br/>
-                             <label>Last Name</label>
-                             <input type="lname"  id="lname" required><br/>
-                             <label>Email</label> 
-                             <input type="email" id="email" required><br/>
-                              <label>Message</label> 
-                             <textarea rows="3" cols="23" wrap="hard"></textarea><br/>
-                             <input type="submit" id="sumbit" value="SEND ENQUIRY"><label for="sumbit"></label>
-                 </fieldset>
+                         <fieldset>
+                                     <label>First Name</label>
+                                     <input type="Fname" id="fname" required><br/>
+                                     <label>Last Name</label>
+                                     <input type="lname"  id="lname" required><br/>
+                                     <label>Email</label> 
+                                     <input type="email" id="email" required><br/>
+                                      <label>Message</label> 
+                                     <textarea rows="3" cols="23" wrap="hard"></textarea><br/>
+                                     <input type="submit" id="sumbit" value="SEND ENQUIRY"><label for="sumbit"></label>
+                         </fieldset>
                   </form>
                 </div>
 </div>
@@ -94,7 +94,7 @@
 			          </div>
 			</div>
 			<div class="col-xs-12 col-sm-4 col-md-4 footerBlock">
-					<h6 class='info'>Contact Info</h6>
+					<h6 class="info">Contact Info</h6>
 					<div class="contact-info">
 						 <ul><i class="fas fa-phone-square"></i><span class="item">+65 98000000</span></ul>
                         <ul><i class="fas fa-envelope"></i><span class="item">ddddd18@gmail.com</span></ul>
@@ -103,7 +103,7 @@
 				</div>
       <div class="col-xs-12 col-sm-4 col-md-4 footerBlock">
 					<div class="list-unstyled">
-					  <h6 class='link'>Link</h6>
+					  <h6 class="link">Link</h6>
 						 <ul class="fList">
                               <ul>
                                 <a class="link1" href="home.html">Home</a>
@@ -125,9 +125,8 @@
                         F0-0 Building X,Jiefang Avenue, Qiaokou District, Wuhan, China</p>
                 </div> 
         	</div>
-        	</div>
-</footer>  
-   
+    	</footer>  
+	</div>
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
