--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name   ="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
@@ -19,9 +19,9 @@
               <span class="navbar-toggler-icon"></span>
            </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                    <a class="nav-link" href="home.html">Home</a>
+            <ul class ="navbar-nav">
+            <li class ="nav-item">
+            <a class  ="nav-link" href="home.html">Home</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="privateTours.html">Private Tours</a>
@@ -37,43 +37,43 @@
      </nav>
 <!-- slideshow Bootstrap  -->
   <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img class="d-block w-100" src="assets/images/slide1.jpg" alt="First slide">
-      <div class="carousel-caption d-none d-md-block">
-    <h5>Yangtze Great Bridge</h5>
-    <p>First Bridge of the Yangtze</p>
-  </div>
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="assets/images/slide1.jpg" alt="First slide">
+              <div class="carousel-caption d-none d-md-block">
+            <h5>Yangtze Great Bridge</h5>
+            <p>First Bridge of the Yangtze</p>
+          </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="assets/images/slide2.jpg" alt="Second slide">
+               <div class="carousel-caption d-none d-md-block">
+            <h5>Wuhan Central</h5>
+            <p>landscape Wuhan City</p>
+          </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="assets/images/slide3.jpg" alt="Third slide">
+               <div class="carousel-caption d-none d-md-block">
+                <h5>Yellow Crane Tower</h5>
+                <p>Historical tower</p>
+          </div>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/slide2.jpg" alt="Second slide">
-       <div class="carousel-caption d-none d-md-block">
-    <h5>Wuhan Central</h5>
-    <p>landscape Wuhan City</p>
-  </div>
+      </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
     </div>
-    <div class="carousel-item">
-      <img class="d-block w-100" src="assets/images/slide3.jpg" alt="Third slide">
-       <div class="carousel-caption d-none d-md-block">
-        <h5>Yellow Crane Tower</h5>
-        <p>Historical tower</p>
-  </div>
-    </div>
-  </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
 </div>
        <div class="container">
         <div class="row row-table">
@@ -114,7 +114,7 @@
 			          </div>
 			</div>
 			<div class="col-xs-12 col-sm-4 col-md-4 footerBlock">
-					<h6 class='info'>Contact Info</h6>
+					<h6 class="info">Contact Info</h6>
 					<div class="contact-info">
 						 <ul><i class="fas fa-phone-square"></i><span class="item">+65 98000000</span></ul>
                         <ul><i class="fas fa-envelope"></i><span class="item">ddddd18@gmail.com</span></ul>
@@ -123,7 +123,7 @@
 				</div>
       <div class="col-xs-12 col-sm-4 col-md-4 footerBlock">
 					<div class="list-unstyled">
-					  <h6 class='link'>Link</h6>
+					  <h6 class="link">Link</h6>
 						 <ul class="fList">
           <ul>
             <a class="link1" href="home.html">Home</a>
@@ -148,7 +148,6 @@
         	</div>
 </footer>
 
-<!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
