--- a/group.html
+++ b/group.html
@@ -14,7 +14,7 @@
 <body>
 <div class="container-fluid"> 
 <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
-        <a href="index.html"><img class="navbar-brand" src="assets/images/logo.png" width="150px" height="150px"></a>
+        <a href="index.html"><img class="navbar-brand" src="assets/images/logo.png" width="150px" height="150px" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
        </button>
@@ -35,7 +35,7 @@
                </ul>
           </div>
  </nav>
-      <div class="banner3"><img src="assets/images/banner3.jpg" width="100%">
+      <div class="banner3"><img src="assets/images/banner3.jpg" width="100%" alt="great city">
       </div>
 </div>
 <div class="container">
@@ -46,7 +46,7 @@
 	   </div>
     <div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block1">
     			<h5>20 May,2019</h5>
-    	 <img src="assets/images/group1.jpg" style="width:100%">
+    	 <img src="assets/images/group1.jpg" style="width:100%" alt="sites">
     			<h5>Enjoy Featured Snacks</h5> 
                 <h6>"Guo Zao" local featured breakfast</h6>
               	<p class="p1">You will find lots of street food unique to the city, like dry noodles, which can be savoured in the popular food mecca – Hubu Alley.</p>
@@ -54,15 +54,15 @@
     </div>   
 	<div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block2">
 		<h5>20 May,2019</h5>
-		<img src="assets/images/group2.jpg" style="width:100%">
+		<img src="assets/images/group2.jpg" style="width:100%" alt="sites">
 			<h5>New Wuhan Tour</h5> 
             <h6>Qingchuan Bridge</h6>
               <p class="p2">Provides a mix of old and new wuhan. Exploring the historical sites while mixing it up with the modern landmarks that make up the area.</p>
             <a href="contactUs.html">More Info</a>
 	</div>   
-	<div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block3">
+	<div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 block3" >
 		<h5>20 May,2019</h5>
-		<img src="assets/images/group3.jpg" style="width:100%">
+		<img src="assets/images/group3.jpg" style="width:100%" alt="sites">
 			<h5>Old Wuhan Tour</h5> 
             <h6>maxime placeat facere</h6>
             <p class="p3"> Wuhan is one of the birthplaces of the powerful ancient state of Chu, and inherits the culture of that state. Provides a historical journey with emphasis on history and culture.</p>
@@ -71,7 +71,7 @@
 	<div class="text">
 		<h3 class="events">Featured Events</h3>
     		<div class="col-lg-4 col-md-4 col-xs-12 col-sm-12 float-left">
-			    <img src="assets/images/group4.jpg" style="width:100%"/>
+			    <img src="assets/images/group4.jpg" style="width:100%" alt="sites"/>
 			</div>
 		    <div class="col-lg-8 col-md-8 col-xs-12 col-sm-12 float-right content">
     		<h5>7 Days Wuhan & Yichang Yangtze Cruise Tour</h5>
@@ -99,7 +99,6 @@
 						<span href="#" style="margin:8px;"><i class="fab fa-google"></i></span>
 			          </div>
 			</div>
-			
 			<div class="col-xs-12 col-sm-4 col-md-4 footerBlock">
 					<h6 class="info">Contact Info</h6>
 					<div class="contact-info">
