--- a/privateTours.html
+++ b/privateTours.html
@@ -13,7 +13,7 @@
   <body>
     <div class="container-fluid"> 
     <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
-            <a href="index.html"><img class="navbar-brand" src="assets/images/logo.png" width="150px" height="150px"></a>
+            <a href="index.html"><img class="navbar-brand" src="assets/images/logo.png" width="150px" height="150px" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
            </button>
@@ -36,6 +36,7 @@
      </nav>
      <div class="banner2"><img src="assets/images/banner2.jpg" width="100%"></div>
      </div>
+     <!--youtube video -->
      <div class="container">
      <div class="row">
              <div class="youtubecontent col-xs-8 col-sm-8 col-md-8">
@@ -70,7 +71,6 @@
               <p class="card-text">Hubei Provincial Museum, East Lake, Yellow Crane Tower</p>
             </div>
             </div>
-            
            <div class="card3 col-xs-12 col-sm-12 col-md-4 col-lg-4" style="max-width:400px;">
                  <div class="card-body">
                     <img class="card-img-top" src="assets/images/card3.jpg" alt="Card image" style="width:100%">
