--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container-fluid"> 
     <nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
-            <a href="index.html"><img class="navbar-brand" src="assets/images/logo.png" width="150px" height="150px"></a>
+            <a href="index.html"><img class="navbar-brand" src="assets/images/logo.png" width="150px" height="150px" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
            </button>
