modify footer link

--- a/contactUs.html
+++ b/contactUs.html
@@ -106,7 +106,7 @@
 					  <h6 class="link">Link</h6>
 						 <ul class="fList">
                               <ul>
-                                <a class="link1" href="home.html">Home</a>
+                                <a class="link1" href="index.html">Home</a>
                               </ul>
                               <ul>
                                 <a class="link1" href="privateTours.html">Private Tours</a>
